# HomeSteader

./: .gitignore  PROJECT_PLAN.md  README.md  functional_check.py  pyproject.toml  verify_ui.py  walkthrough_harness.py
config/: logical_document_layouts.example.json  move_in_packet.example.json  program_rules.example.json
docs/: AI_PROPOSAL_CONTRACT.md  ASSURANCE_MODEL.md  BATCH_INFERENCE_MODEL.md  CASE_MANAGEMENT_MODULE.md  CLASSIFICATION_BASELINE.md  GEMINI_DESKTOP_BRIDGE.md  HATEFUL_EIGHT_TEST_MATRIX.md  HMIS_IDENTITY_RULE.md  ICLOUD_INTAKE.md  IDENTITY_RESOLUTION.md  INBOX_MODEL.md  INFORMATION_EXTRACTION_PROTOCOL.md  LOCAL_VISION_MODELS.md  MOVE_IN_PACKET.md  PACKET_INTAKE.md  PROTOTYPE_SPEC.md  SECURITY_MODEL.md  TEMPORAL_PROVENANCE.md  TLS_PACKET_TEST_MATRIX.md
expected_results/: lease_addendum.json
fixtures/: ambiguous_pet_addendum.txt  blank_consent_to_share_information.txt  blank_consent_to_share_information_rescan.txt  completed_consent_jasmine.txt  completed_consent_missing_participant.txt  contact_information_jasmine.txt  correction_report_fictional.json  handwritten_quarterly_income_verification.expected.json  income_declaration_jasmine_february.txt  income_declaration_jasmine_january.txt  income_declaration_undated.txt  lease_elena_ramirez.txt  move_in_habitability_harbor_view_complete.txt  move_in_landlord_acknowledgement_jasmine_complete.txt  move_in_lease_jasmine_complete.txt  move_in_ownership_verification_harbor_view_complete.txt  move_in_request_jasmine_complete.txt  move_in_unit_owner_certification_jasmine_complete.txt  (+11 more)
homesteader/: app.py  (+18 more)
(+25 files in other folders)
