[project]
name = "homesteader"
version = "0.0.1"
description = "Local-first document intelligence prototype"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=3.0,<4.0",
    "pypdf>=5.0,<7.0",
    "pyobjc-framework-Vision>=12.2,<13.0; sys_platform == 'darwin'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["homesteader*"]
